# biblioteca

./: .gitattributes  .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yaml  experiment.ipynb  pyproject.toml  sam.py
frontend/: .dockerignore  .prettierignore  Dockerfile  Dockerfile.dev  docker-compose.dev.yaml  docker-compose.yaml  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/api/books/: route.ts
frontend/app/api/books/bulk-add/: route.ts
frontend/app/api/bookstores/: route.ts
frontend/app/api/images/[bookstoreSlug]/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/bookstore/[slug]/add/: page.tsx
frontend/app/bookstore/[slug]/inventory/: page.tsx
frontend/app/bookstore/add/: page.tsx
frontend/app/bookstore/inventory/: page.tsx
frontend/components/: BookConfirmation.tsx  Dropzone.tsx  Navbar.tsx
frontend/components/ui/: expandable-tabs.tsx
frontend/lib/: s3.ts  utils.ts
frontend/prisma/: schema.prisma
frontend/prisma/migrations/20250928145321_initial_commit/: migration.sql
frontend/prisma/migrations/20250928153308_initial_commit/: migration.sql
frontend/prisma/migrations/20251004163329_unique_identifiers_for_some_fields/: migration.sql
inference/: .dockerignore  .gitignore  Dockerfile  app.py  fly.toml  requirements.txt  schema.py  utils.py
notebooks/: .gitignore  experiment.ipynb  results.txt  sam.py  train.py  yolo.ipynb
notebooks/.ipynb_checkpoints/: experiment-checkpoint.ipynb
