[tool.poetry]
name = "biblioteca"
version = "0.1.0"
description = ""
authors = ["Keane Moraes <lordvader3002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
segment-anything = "^1.0"
diffusers = "^0.35.1"
transformers = "^4.56.1"
accelerate = "^1.10.1"
scipy = "^1.16.1"
safetensors = "^0.6.2"
opencv-python = "^4.12.0.88"
matplotlib = "^3.10.6"
pillow = "^11.3.0"
torchvision = "^0.23.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
